see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

16-Jul-2010 Mark Dexter
# Fix controlpanel0002 for button change
# Eliminate second doInstall in TestSuite (no longer needed)

14-Jul-2010 Mark Dexter
# [#21236] PHP System Tests for Tracker Item 20836 Capitalization of "toolbar-popup-Popup"
# [#21312] PHP System Test to check error messages associated with actions performed when nothing is selected
# Update TestSuite for new test
# Add language0001Test from [#21312]

13-Jul-2010 Mark Dexter
# Fix SeleniumJoomlaTestCase to report PHP notices
# System test for [#21083] Category List menu link to unpublished category gives error

12-Jul-2010 Mark Dexter
# Fix failing system test for sample data changes
# Update controlpanel0004Test for [#21196] Save order disk not disabled when not in ordering sort

11-Jul-2010 Mark Dexter
# Add group0002 test to suite
# Clean up system tests for sample data changes

05-Jul-2010 Mark Dexter
# Fix system tests for sample data changes
# Improvements to test methods (Matt Thomas)

04-Jul-2010 Mark Dexter
# Fix failing system tests (turn off caching, adjust for language changes)

01-Jul-2010 Mark Dexter
# Fix problems with system test acl0001Test (Matt Thomas)
# Fix problems running JElement unit tests stand-alone

30-Jun-2010 Mark Dexter
# Fix failing system tests
# Fix system tests for uncategorised category changes

28-Jun-2010 Mark Dexter
# Fix failing system test
+ Added tests for JInstaller

27-Jun-2010 Mark Dexter
# Fix failing system tests from [#20372] toggle name change

26-Jun-2010 Ian MacLennan
+ Added JInstaller test
# Improved JError handling in JoomlaTestCase

25-Jun-2010 Mark Dexter